force-app/main/default/objects/Asset/fields/AreaPrivativa__c.field-meta.xml
<CustomField>
    <fullName>AreaPrivativa__c</fullName>
    <label>Área Privativa</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>