force-app/main/default/objects/Asset/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ativos</relationshipLabel>
    <relationshipName>Ativos</relationshipName>
    <type>Lookup</type>
</CustomField>