force-app/main/default/objects/Asset/fields/FracaoIdeal__c.field-meta.xml
<CustomField>
    <fullName>FracaoIdeal__c</fullName>
    <label>Fração Ideal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>