force-app/main/default/objects/Asset/fields/MetragemDaUnidadeM__c.field-meta.xml
<CustomField>
    <fullName>MetragemDaUnidadeM__c</fullName>
    <label>Metragem da Unidade (m²)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>