force-app/main/default/objects/Asset/fields/NumeroQuartos__c.field-meta.xml
<CustomField>
    <fullName>NumeroQuartos__c</fullName>
    <label>Número de Quartos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>