force-app/main/default/objects/Asset/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>70</length>
    <type>Text</type>
</CustomField>