force-app/main/default/objects/Asset/fields/TipoDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>TipoDaUnidade__c</fullName>
    <label>Tipo da Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoUnidadeProduto</valueSetName>
    </valueSet>
</CustomField>