force-app/main/default/objects/Asset/fields/Torre__c.field-meta.xml
<CustomField>
    <fullName>Torre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torre</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Ativos</relationshipLabel>
    <relationshipName>Ativos</relationshipName>
    <type>Lookup</type>
</CustomField>