force-app/main/default/objects/Asset/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Unidade</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ativos</relationshipLabel>
    <relationshipName>Ativos</relationshipName>
    <type>Lookup</type>
</CustomField>