force-app/main/default/objects/Asset/fields/ValorDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>ValorDaUnidade__c</fullName>
    <formula>Torre__r.Empreendimento__r.ValorMetroQuadrado__c * MetragemDaUnidadeM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor da Unidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>