force-app/main/default/objects/Asset/recordTypes/SalaComercial.recordType-meta.xml
<RecordType>
    <fullName>SalaComercial</fullName>
    <active>true</active>
    <label>Sala Comercial</label>
</RecordType>